# playgroup_202605_make_gpt

./: .gitignore  README.md
nanogpt_cleaned/: .gitignore  EXPECTED_OUTPUT.md  README.md  model.py  model_missing_attn.py  model_missing_block.py  model_missing_layernorm.py  model_missing_mlp.py  model_missing_wpewte.py  pyproject.toml  sample.py  train.py
nanogpt_cleaned/shakespeare_char/: prepare.py
